--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Practice Portfolio</title>
 	</head>
-	<body></body>
+	<body>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Est libero fugit
+		quod officia porro vero tenetur, facilis illum ullam fugiat, dicta minima
+		quasi asperiores esse quisquam earum sint beatae nisi?
+	</body>
 </html>
